# architecture-cinemaabyss

./: .gitignore  Project_template.md  docker-compose.yml
.github/workflows/: docker-build-push.yml
docs/c1/: to-be.puml
docs/c2/: to-be.puml
docs/c3/: to-be-auth-service.puml  to-be-cinema-facade-service.puml  to-be-cinema-service.puml  to-be-movie-service.puml  to-be-movie-view-service.puml  to-be-rating-adapter-service.puml  to-be-rating-service.puml  to-be-search-service.puml
docs/c4/: to-be-run-watch-movie.puml  to-be-sync-rating.puml  to-be-sync-third-party-cinemas-movies.puml  to-be-upload-new-movie.puml
src/kubernetes/: configmap.yaml  events-service.yaml  ingress.yaml  monolith.yaml  movies-service.yaml  proxy-service.yaml
src/kubernetes/helm/: values.yaml
src/kubernetes/helm/templates/: configmap.yaml
src/kubernetes/helm/templates/services/: events-service.yaml  proxy-service.yaml
src/microservices/events/: Dockerfile  app.py  pyproject.toml
src/microservices/movies/: Dockerfile
src/microservices/proxy/: Dockerfile  app.py  pyproject.toml
src/monolith/: Dockerfile
